# hABM-AlveolusModel

./: CMakeLists.txt  LICENSE  README.md  config_human.json  config_mouse.json
Analysis_SurrogateInfectionModel/: MultilayerPerceptron.py  README.md  process_simulation_output.py  run_cross_validation.py  run_symmetry_error_calculation.py  train_compressed_exponential_function.py  train_surrogate_infection_model.py  train_weibull_surival_model.py  utils.py
Analysis_SurrogateInfectionModel/cross_validation/: cv_human.csv  cv_mouse.csv
Analysis_SurrogateInfectionModel/fitted_parameter/: CEF_human.csv  CEF_mouse.csv  SIM_human.csv  SIM_mouse.csv  WSM_human.csv  WSM_mouse.csv
Analysis_SurrogateInfectionModel/processed_data/: human_processed_data.csv  mouse_processed_data.csv
cmake/: Doxygen.cmake  StaticAnalyzers.cmake
configurations/namStudyHuman/: analyser-config.json  input-config.json  simulator-config.json  visualisation-config.json
configurations/namStudyHuman/AlveolusOutput/: runs.xml
configurations/namStudyHuman/AlveolusOutput/2022-11-09_11-20-38_sAEC1500_nOfM4_nOfCon1_dc20_1/: runs.csv  screening.csv
configurations/namStudyHuman/AlveolusOutput/2022-11-09_11-42-04_sAEC1500_nOfM4_nOfCon1_dc20_1/: output-config.json
configurations/namStudyHuman/AlveolusOutput/2022-11-09_15-07-15_sAEC1500_nOfM4_nOfCon1_dc20_1/: input-config.json  output-config.json  simulator-config.json
configurations/namStudyHuman/AlveolusOutput/2022-11-10_13-53-02_sAEC1500_nOfM2_nOfCon2_dc6000_0/: runs.csv  screening.csv
configurations/namStudyMouse/: output-config.json  simulator-config.json  visualisation-config.json
configurations/namStudyMouse/AlveolusOutput/: runs.xml
configurations/testAlveolusHuman/: input-config.json  simulator-config.json
configurations/testAlveolusMouse/: simulator-config.json
input/AMdistributions/Human/: changeLambdaName.sh  delStuff.sh  readLambdaVals.sh  readoutAMDIST_human.sh
input/AMdistributions/Mouse/: changeLambdaName.sh  delStuff.sh  readLambdaVals.sh  readoutAMDIST_mouse.sh
input/particle-dist/: 513particles-delauney.xml
src/: CMakeLists.txt  main.cpp
src/analyser/: Analyser.cpp  Analyser.h  CMakeLists.txt  InSituMeasurements.cpp  InSituMeasurements.h  histogram_measurement.cpp  histogram_measurment.h  pair_measurement.h  pair_measurment.cpp
src/basic/: CMakeLists.txt  ColorRGB.cpp  ColorRGB.h  Coordinate3D.cpp  Coordinate3D.h  InversionSampler.cpp  InversionSampler.h  Randomizer.cpp  Randomizer.h  Sampler.cpp  Sampler.h  SphericCoordinate3D.cpp  SphericCoordinate3D.h
src/io/: CMakeLists.txt  InputConfiguration.cpp  InputConfiguration.h  XMLFile.cpp  XMLFile.h  output_handler.cpp  output_handler.h
src/simulation/: Agent.cpp  Agent.h  AgentManager.cpp  AgentManager.h  AgentProperties.cpp  AgentProperties.h  Algorithms.cpp  Algorithms.h  BalloonListNHLocator.cpp  BalloonListNHLocator.h  CMakeLists.txt  Cell.cpp  Cell.h  CellFactory.cpp  CellFactory.h  CellStateFactory.cpp  CellStateFactory.h  Condition.cpp  Condition.h  Interaction.cpp  Interaction.h  InteractionEvent.cpp  InteractionEvent.h  InteractionFactory.cpp  InteractionFactory.h  InteractionState.cpp  InteractionState.h  InteractionStateFactory.cpp  InteractionStateFactory.h  InteractionType.cpp  InteractionType.h  Interactions.cpp  Interactions.h  Morphology.cpp  Morphology.h  Movement.cpp  Movement.h  NeighbourhoodLocator.cpp  NeighbourhoodLocator.h  Particle.cpp  (+13 more)
src/simulation/boundary-condition/: AbsorbingBoundaries.cpp  AbsorbingBoundaries.h
src/simulation/cells/: AspergillusFumigatus.cpp  AspergillusFumigatus.h  CellState.cpp  CellState.h  Macrophage.cpp  Macrophage.h
src/simulation/cells/interaction/: AvoidanceInteraction.cpp  AvoidanceInteraction.h  IdenticalCellsInteraction.cpp  IdenticalCellsInteraction.h  NoInteraction.cpp  NoInteraction.h  PhagocyteFungusInteraction.cpp  PhagocyteFungusInteraction.h
src/simulation/interactiontypes/: Contacting.cpp  Contacting.h  Ingestion.cpp  Ingestion.h  RigidContacting.cpp  RigidContacting.h
src/simulation/morphology/: MorphologyElement.cpp  MorphologyElement.h  SphereRepresentation.cpp  SphereRepresentation.h  SphericalMorphology.cpp  SphericalMorphology.h
src/simulation/movement/: BiasedPersistentRandomWalk.cpp  BiasedPersistentRandomWalk.h  RandomWalk.cpp  RandomWalk.h
src/simulation/neighbourhood/: BoundaryCondition.cpp  BoundaryCondition.h  Collision.cpp  Collision.h  StaticBalloonList.cpp  StaticBalloonList.h
src/simulation/rates/: ConditionalRate.cpp  ConditionalRate.h  ConstantRate.cpp  ConstantRate.h
src/simulation/site/: AlveoleSite.cpp  AlveoleSite.h  SphereSite.cpp  SphereSite.h
src/utils/: CMakeLists.txt  io_util.cpp  io_util.h  macros.h  misc_util.cpp  misc_util.h  time_util.cpp  time_util.h
src/visualisation/: CMakeLists.txt  PovFile.cpp  PovFile.h  PovRayObject.cpp  PovRayObject.h  Visualizer.cpp  Visualizer.h
test/: CMakeLists.txt
test/configurations/testAlveolusHuman/: config.json
test/configurations/testAlveolusMouse/: config.json
test/src/: testConfigurations.cpp  testConfigurations.h  testUnits.cpp  testUnits.h
(+43574 files in other folders)
