add_library(simulation SHARED
        Agent.cpp
        AgentManager.cpp
        AgentProperties.cpp
        Algorithms.cpp
        BalloonListNHLocator.cpp
        NeighbourhoodLocator.cpp
        Cell.cpp
        CellFactory.cpp
        CellStateFactory.cpp
        Condition.cpp
        Interaction.cpp
        InteractionEvent.cpp
        InteractionFactory.cpp
        Interactions.cpp
        InteractionState.cpp
        InteractionStateFactory.cpp
        InteractionType.cpp
        Morphology.cpp
        Movement.cpp
        Particle.cpp
        ParticleManager.cpp
        ParticleNeighbourList.cpp
        Rate.cpp
        RateFactory.cpp
        simulator.cpp
        Site.cpp
        boundary-condition/AbsorbingBoundaries.cpp
        cells/AspergillusFumigatus.cpp
        cells/CellState.cpp
        cells/Macrophage.cpp
        cells/interaction/AvoidanceInteraction.cpp
        cells/interaction/IdenticalCellsInteraction.cpp
        cells/interaction/NoInteraction.cpp
        cells/interaction/PhagocyteFungusInteraction.cpp
        interactiontypes/Contacting.cpp
        interactiontypes/Ingestion.cpp
        interactiontypes/RigidContacting.cpp
        morphology/MorphologyElement.cpp
        morphology/SphereRepresentation.cpp
        morphology/SphericalMorphology.cpp
        movement/BiasedPersistentRandomWalk.cpp
        movement/RandomWalk.cpp
        neighbourhood/BoundaryCondition.cpp
        neighbourhood/StaticBalloonList.cpp
        neighbourhood/Collision.cpp
        rates/ConditionalRate.cpp
        rates/ConstantRate.cpp
        site/AlveoleSite.cpp
        site/SphereSite.cpp
        )
add_library(abm::simulation ALIAS simulation)
target_include_directories(simulation PRIVATE ${PROJECT_SOURCE_DIR}/src)
